--- a/greetings.html
+++ b/greetings.html
@@ -51,6 +51,6 @@ body{
         greet = 'Good Evening  ';
 
     document.getElementById('lbl').innerHTML =
-        greet+= “基旭” <div id="date"> It's ${date}</div>`;
+        greet+= “基旭” +<div id="date"> It's ${date}</div>`;
 </script> 
 </html>
